--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "react-native": "0.61.5",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-cardview": "^2.0.5",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.0.0"
   },
   "devDependencies": {
