--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean-cache": "rm -rf $TMPDIR/react-; rm -rf $TMPDIR/haste-; rm -rf $TMPDIR/metro-*; watchman watch-del-all; npm i; npx react-native start -- --reset-cache;"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -15,10 +16,13 @@
     "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "axios": "^0.21.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-cardview": "^2.0.5",
+    "react-native-dotenv": "^2.4.1",
+    "react-native-fix-image": "^2.0.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.10.1",
