--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.21.0",
+    "buffer": "^5.7.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-banner-carousel": "^1.0.3",
