--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-banner-carousel": "^1.0.3",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-cardview": "^2.0.5",
     "react-native-dotenv": "^2.4.1",
     "react-native-fix-image": "^2.0.1",
