upload image style

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 URL='https://shop-demo-student-server-dev-e5rdplkjjq-as.a.run.app'
 URL_DEV_2='http://localhost:8080'
+URL_google_bucket='https://shopping_apps_demo.storage.googleapis.com'
