--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.0.0",
+    "rn-fetch-blob": "^0.12.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
