--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "clean-cache": "rm -rf $TMPDIR/react-; rm -rf $TMPDIR/haste-; rm -rf $TMPDIR/metro-*; watchman watch-del-all; npm i; npx react-native start -- --reset-cache;"
+    "clean-cache": "rm -rf $TMPDIR/react-; rm -rf $TMPDIR/haste-; rm -rf $TMPDIR/metro-*; watchman watch-del-all; npm i; npx react-native start -- --reset-cache;",
+    "create-apk": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/; cd android; ./gradlew assembledebug; cd ..",
+    "create-prod-apk": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/; cd android; ./gradlew assembledebug; cd .."
+
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
