--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "clean-cache": "rm -rf $TMPDIR/react-; rm -rf $TMPDIR/haste-; rm -rf $TMPDIR/metro-*; watchman watch-del-all; npm i; npx react-native start -- --reset-cache;",
     "create-apk": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/; cd android; ./gradlew assembledebug; cd ..",
     "create-prod-apk": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/; cd android; ./gradlew assembledebug; cd .."
-
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -21,15 +20,18 @@
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.21.0",
     "buffer": "^5.7.0",
+    "moment": "^2.29.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-cardview": "^2.0.5",
+    "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^2.4.1",
     "react-native-fix-image": "^2.0.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^9.0.0",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.0.7",
